# Soft3DRenderer

./: CMakeLists.txt  README.md
CPURenderer/: Matrix3D.cpp  OBJLoader.cpp  OBJLoader.h  SDLMain.m  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  main.cpp  mmath.h
CPURenderer.xcodeproj/: project.pbxproj
CPURenderer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CPURenderer.xcodeproj/project.xcworkspace/xcuserdata/neil.xcuserdatad/: UserInterfaceState.xcuserstate
CPURenderer.xcodeproj/xcuserdata/neil.xcuserdatad/xcschemes/: CPURenderer.xcscheme  xcschememanagement.plist
SDL/: INSTALL_RECEIPT.json
SDL/lib/: libSDL-1.2.0.dylib
include/: Matrix3D.h  mmath.h
src/: main.cpp
